test/sematest/valid/test6.valid.java
/* -*- coding:utf-8; mode:java; -*- */

class Test {

	public static void main(String[] args) { }

	public int flow() {
		return -2147483648;
	}

}
