test/sematest/invalid/test1.java
/* -*- coding:utf-8; mode:java; -*- */

class Test {

	public static void main(String[] args) { }

	public int overflow() {
		return 2147483648;
	}

}
